--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,99 @@ div
   padding-bottom: 10px;
 }
 
+/* Login form */
+.login-button {
+  padding: .25em 5em;
+  width: 100px;
+  height: 50px;
+  font-size: 1.5rem;
+  font-weight: lighter;
+  color: white;
+  background-color: rgba(38, 126, 226, 0.25);
+  border: 1px solid rgba(38, 151, 226, 0.25);
+  border-radius: .25em;
+  outline: none;
+  cursor: pointer;
+}
+
+.login-container {
+  background-color:rgba(82, 94, 167, 0.4);
+  box-shadow: 0 0 15px 0 rgba(82, 94, 167, 0.4);
+  padding: 40px 30px;
+  width: 80%;
+  max-width: 600px;
+  border-radius: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  display: none;
+  z-index: 2;
+}
+
+.login-title {
+  text-align: center;
+  margin: auto;
+  color: white;
+  font-size: 2rem;
+  font-weight: normal;
+}
+
+.login-form {
+  display: flex;
+  flex-direction: column;
+  color: white;
+  gap: 20px;
+  margin-top: 40px;
+}
+
+.input-group label{
+  display: flex;
+  flex-direction: column;
+  gap: 7px
+}
+
+.input-group input {
+  font-size: 1.25rem;
+  padding: .5em;
+  background-color: rgba(82, 93, 131, 0.4);
+  border: none;
+  outline: none;
+  border-radius: .25em;
+  color: white;
+  font-weight: lighter;
+}
+
+.input-group.success input {
+  box-shadow: 0 0 0 1px rgba(116, 224, 116, 0.726);
+}
+
+.input-group.error input {
+  box-shadow: 0 0 0 1px rgba(209, 68, 68, 0.726);
+}
+
+.input-group input:focus {
+  box-shadow: 0 0 0 1px rgba(49, 216, 228, 0.952);
+}
+
+.input-group.success .input-msg, .input-group.error .input-msg {
+  display: block;
+}
+
+.login-submit {
+  padding: .5em 1em;
+  font-size: 1.5rem;
+  font-weight: lighter;
+  color: white;
+  background-color: rgba(38, 126, 226, 0.25);
+  border: 1px solid rgba(38, 151, 226, 0.25);
+  border-radius: .25em;
+  outline: none;
+  cursor: pointer;
+}
+
+.login-button:hover, .login-button:focus {
+  background-color: rgba(38, 126, 226, 0.4);
+}
+
 /* The animation code */
 @keyframes example {
   from {background-color: yellow; transform: rotate(0deg);}
@@ -99,7 +192,6 @@ p2 {
   width: 800px;
   margin: auto;
 }
-
 
 .topnav {
   background-color: #333;
