--- a/styles.css
+++ b/styles.css
@@ -37,7 +37,7 @@ div
   border-radius: 20px;
   margin-left: auto;
   margin-right: auto;
-  display: none;
+  position: absolute;
   z-index: 2;
 }
 
