--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,10 @@ div
   width: 80%;
   max-width: 600px;
   border-radius: 20px;
+  margin-left: auto;
+  margin-right: auto;
   position: absolute;
+  font-family: "montserrat", sans-serif;
   z-index: 2;
 }
 
@@ -72,20 +75,13 @@ div
   font-weight: lighter;
 }
 
-.input-group.success input {
-  box-shadow: 0 0 0 1px rgba(116, 224, 116, 0.726);
-}
-
-.input-group.error input {
-  box-shadow: 0 0 0 1px rgba(209, 68, 68, 0.726);
-}
-
 .input-group input:focus {
   box-shadow: 0 0 0 1px rgba(49, 216, 228, 0.952);
 }
 
-.input-group.success .input-msg, .input-group.error .input-msg {
-  display: block;
+.input-group.input-msg-email {
+  display: none;
+  color: red;
 }
 
 .login-submit {
@@ -108,30 +104,6 @@ div
 @keyframes example {
   from {background-color: yellow; transform: rotate(0deg);}
   to {background-color: red; transform: rotate(360deg);}
-}
-
-/* The element to apply the animation to */
-#dontpush {
-  width: 75px;
-  height: 75px;
-  background-color: red;
-  animation-name: example;
-  animation-duration: 1s;
-  animation-iteration-count: infinite;
-}
-
-#dontpush {
-  background-color: yellow;
-  border-radius: 4px;
-  border: 4px solid green;
-  color: black;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: auto;
-  cursor: pointer;
-  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 
 #textbox {
