--- a/styles.css
+++ b/styles.css
@@ -35,8 +35,7 @@ div
   width: 80%;
   max-width: 600px;
   border-radius: 20px;
-  margin-left: auto;
-  margin-right: auto;
+  margin: auto;
   position: absolute;
   font-family: "montserrat", sans-serif;
   z-index: 2;
@@ -88,6 +87,8 @@ div
   background-color: rgba(38, 126, 226, 0.25);
   border: 1px solid rgba(38, 151, 226, 0.25);
   border-radius: .25em;
+  width: 40%;
+  max-width: 400px;
   outline: none;
   cursor: pointer;
 }
