--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,8 @@ div
   width: 80%;
   max-width: 600px;
   border-radius: 20px;
-  margin: auto;
+  display: flex;
+  justify-content: center;
   font-family: "montserrat", sans-serif;
   z-index: 2;
 }
@@ -59,6 +60,7 @@ div
 
 .input-group label{
   display: flex;
+  justify-content: left;
   flex-direction: column;
   gap: 7px
 }
