Even moar css fixes

--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,7 @@ div
   display: flex;
   justify-content: center;
   font-family: "montserrat", sans-serif;
-  position: relative;
+  position: absolute;
   z-index: 2;
 }
 
@@ -91,7 +91,8 @@ div
   border-radius: .25em;
   width: 40%;
   max-width: 200px;
-  margin: auto;
+  display: flex;
+  justify-content: center;
   outline: none;
   cursor: pointer;
 }
