--- a/styles.css
+++ b/styles.css
@@ -10,25 +10,30 @@ div
 {
   text-align: center;
   margin: auto;
-  padding-bottom: 10px;
+  padding-top: 5px;
+  padding-bottom: 4px;
 }
 
-/* Login form */
 .login-button {
-  padding: .25em 5em;
   width: 100px;
   height: 50px;
   font-size: 1.5rem;
   font-weight: lighter;
-  color: white;
+  text-align: center;
+  color: rgb(255, 255, 255);
   background-color: rgba(38, 126, 226, 0.25);
   border: 1px solid rgba(38, 151, 226, 0.25);
   border-radius: .25em;
+  display: block;
+  position: relative;
+  margin-left: auto;
+  margin-right: 5px;
   outline: none;
   cursor: pointer;
   font-family: "montserrat", sans-serif;
 }
 
+/* Login form */
 .login-container {
   background-color:rgba(77, 88, 156, 0.85);
   box-shadow: 0 0 15px 0 rgba(82, 94, 167, 0.4);
