--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,5 @@
 /* Place your CSS styles in this file */
 
-h1 {
-    text-align: center;
-    font-family: "Source Sans Pro", sans-serif;
-    font-weight: normal;
-}
-
-div
-{
-  text-align: center;
-  margin: auto;
-  padding-top: 5px;
-  padding-bottom: 4px;
-}
-
 .login-button {
   width: 100px;
   height: 50px;
@@ -33,8 +19,44 @@ div
   font-family: "montserrat", sans-serif;
 }
 
-/* Login form */
+.signup-button {
+  width: 100px;
+  height: 35px;
+  font-size: 1.5rem;
+  font-weight: lighter;
+  text-align: center;
+  color: rgb(255, 255, 255);
+  background-color: rgba(38, 126, 226, 0.25);
+  border: 1px solid rgba(38, 151, 226, 0.25);
+  border-radius: .25em;
+  position: relative;
+  margin: auto;
+  outline: none;
+  cursor: pointer;
+  font-family: "montserrat", sans-serif;
+}
+
+/* Login and signup form */
 .login-container {
+  background-color:rgba(77, 88, 156, 0.85);
+  box-shadow: 0 0 15px 0 rgba(82, 94, 167, 0.4);
+  padding: 40px 30px;
+  width: 80%;
+  height: 40%;
+  max-width: 600px;
+  max-height: 400px;
+  border-radius: 20px;
+  justify-content: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 2;
+  font-family: "montserrat", sans-serif;
+}
+
+.signup-container {
   background-color:rgba(77, 88, 156, 0.85);
   box-shadow: 0 0 15px 0 rgba(82, 94, 167, 0.4);
   padding: 40px 30px;
@@ -67,6 +89,7 @@ div
   color: white;
   font-size: 1rem;
   font-weight: lighter;
+  margin-top: 20px;
 }
 
 .login-form {
@@ -121,6 +144,21 @@ div
   background-color: rgba(10, 161, 221, 0.747);
 }
 
+/* Landing page css */
+h1 {
+  text-align: center;
+  font-family: "montserrat", sans-serif;
+  font-weight: normal;
+}
+
+div
+{
+text-align: center;
+margin: auto;
+padding-top: 5px;
+padding-bottom: 4px;
+}
+
 #textbox {
   width: 520px;
   padding: 10px;
@@ -158,6 +196,7 @@ p1 {
 .topnav {
   background-color: #333;
   overflow: hidden;
+  font-family: "montserrat", sans-serif;
 }
 
 /* Topnav bar stuff */
