--- a/styles.css
+++ b/styles.css
@@ -178,6 +178,18 @@ padding-top: 5px;
 padding-bottom: 4px;
 }
 
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 10%;
+  background-color: #333;
+  color: white;
+  font-family: "montserrat", sans-serif;
+  text-align: center;
+}
+
 p1 {
     color:red;
     font-family:courier;
