--- a/styles.css
+++ b/styles.css
@@ -286,6 +286,12 @@ p1 {
   margin: auto;
 }
 
+#reservation-googleMap {
+  height: 300px;
+  width: 600px;
+  margin: auto;
+}
+
 .topnav {
   background-color: #333;
   overflow: hidden;
@@ -302,6 +308,178 @@ p1 {
   font-family: "montserrat", sans-serif;
   text-align: justify;
 }
+
+/* Product page css */
+.row {
+  display: flex;
+  width: 80%;
+  justify-content: center;
+  margin-top: 50px;
+  color: black;
+  font-family: "montserrat", sans-serif;
+}
+
+/* Create two equal columns that sits next to each other */
+.image-column {
+  flex: 30%;
+  max-width: 30%;
+  padding: 10px;
+  justify-content: center;
+  margin-top: 0;
+  margin-right: 10px;
+  height: 500px; /* Should be removed. Only for demonstration */
+}
+
+/* Position the image container (needed to position the left and right arrows) */
+.product-image-container {
+  position: relative;
+}
+
+/* Hide the images by default */
+.mySlides {
+  display: block;
+}
+
+/* Add a pointer when hovering over the thumbnail images */
+.cursor {
+  cursor: pointer;
+}
+
+/* Next & previous buttons */
+.prev,
+.next {
+  cursor: pointer;
+  position: absolute;
+  top: 40%;
+  width: auto;
+  padding: 16px;
+  margin-top: -50px;
+  color: white;
+  font-weight: bold;
+  font-size: 20px;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+  -webkit-user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+.prev {
+  left: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover,
+.next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* Container for image text */
+.caption-container {
+  text-align: center;
+  background-color: #222;
+  padding: 2px 16px;
+  color: white;
+}
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Six columns side by side */
+.column {
+  float: left;
+  width: 33.33%;
+}
+
+/* Add a transparency effect for thumnbail images */
+.demo {
+  opacity: 0.6;
+}
+
+.active,
+.demo:hover {
+  opacity: 1;
+}
+
+.info-column {
+  flex: 50%;
+  padding: 10px;
+  height: 900px; /* Should be removed. Only for demonstration */
+  text-align: left;
+}
+
+.checked {
+  color: orange;
+}
+
+div.elem-group {
+  margin: 20px 0;
+  text-align: left;
+}
+
+div.elem-group.inlined {
+  width: 49%;
+  display: inline-block;
+}
+
+label {
+  display: block;
+  font-family: "montserrat", sans-serif;
+  padding-bottom: 10px;
+  font-size: 1.25em;
+}
+
+input, select, textarea {
+  border-radius: 2px;
+  border: 2px solid #777;
+  box-sizing: border-box;
+  font-size: 1.25em;
+  font-family: "montserrat", sans-serif;
+  width: 100%;
+  padding: 10px;
+}
+
+div.elem-group.inlined input {
+  width: 95%;
+  display: inline-block;
+}
+
+textarea {
+  height: 250px;
+}
+
+hr {
+  border: 1px dotted #ccc;
+}
+
+#reserve-button {
+  height: 50px;
+  background: rgba(23, 123, 238, 0.596);
+  border: none;
+  color: white;
+  font-size: 1.25em;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+/* Payment page stuff */
 
 /* Topnav bar stuff */
 /* Style the links inside the navigation bar */
