--- a/styles.css
+++ b/styles.css
@@ -469,6 +469,24 @@ p1 {
   text-align: left;
 }
 
+#price-tag {
+  position: relative;
+  font-size: 32px;
+  color: rgb(103, 197, 90);
+  margin-top: -10px;
+}
+
+#review-rating {
+  display: inline-block;
+  position: relative;
+  margin-top: -30px;
+  margin-left: -10px
+}
+
+span + span {
+  margin-left: -10px;
+}
+
 .checked {
   color: orange;
 }
