Added a whole lot of shit

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 /* Place your CSS styles in this file */
-
+/* Login and signup form css */
 .login-button {
   width: 100px;
   height: 50px;
@@ -55,7 +55,6 @@
   font-family: "montserrat", sans-serif;
 }
 
-/* Login and signup form */
 .login-container {
   background-color:rgba(77, 88, 156, 0.85);
   box-shadow: 0 0 15px 0 rgba(82, 94, 167, 0.4);
@@ -291,14 +290,203 @@ padding-bottom: 4px;
   font-size: smaller;
 }
 
-p1 {
-    color:red;
-    font-family:courier;
-    text-align:center;
-    font-size:250%;
+/* Catalog page css */
+h4 {
+  position: relative;
+  color:#4d77d1;
+  text-align: left;
+  font-family: "montserrat", sans-serif;
+  font-size: 32px;
+  margin-top: 10px;
+  margin-left: 25px;
+  margin-bottom: 0;
+}
+
+#search-container {
+  display: block;
+  position: relative;
+  font-family: "montserrat", sans-serif;
+  width: 80%;
+  margin-left: 20px;
+}
+
+#search-container button {
+  position: absolute;
+  float: right;
+  padding: 6px 10px;
+  margin-top: 4px;
+  background: #ddd;
+  font-size: 17px;
+  border: none;
+  cursor: pointer;
+  margin-left: 10px;
+}
+
+#search-bar {
+  padding: 6px;
+  margin-top: 8px;
+  font-size: 17px;
+  border: none;
+}
+
+#search-bar {
+  border: 1px solid #ccc;  
+}
+
+#search-container button:hover {
+  background: #ccc;
+}
+
+.filter-button {
+  float: right;
+  position: relative;
+  margin-top: -40px;
+  margin-right: 180px;
+  background-color: #3498DB;
+  color: white;
+  width: 100px;
+  padding: 14px;
+  font-size: 18px;
+  border: none;
+  cursor: pointer;
+}
+
+.filter-button:hover, .filter-button:focus {
+  background-color: #2980B9;
+}
+
+.filter-content {
+  display: none;
+  float: right;
+  position: relative;
+  background-color: #f1f1f1;
+  width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+  font-family: "montserrat", sans-serif;
+  margin-top: 10px;
+  margin-inline: -160px;
+}
+
+.filter-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.filter-content a:hover {background-color: #ddd;}
+
+.show {display:block;}
+
+#booking-steps {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  background-color: rgb(173, 173, 173);
+  width: 100%;
+  height: 75px;
+  margin-top: 20px;
+  justify-content: center;
+  column-gap: 20px;
+}
+
+.booking-steps-text {
+  color:#3B5998;
+  font-family: "montserrat", sans-serif;
+  font-size: 24px;
+}
+
+#car-listing {
+  display: block;
+  position: relative;
+  background-color: white;
+  box-shadow: 10px 8px 8px 10px rgba(51, 51, 51, 0.301);
+  width: 60%;
+  height: 225px;
+  margin-top: 20px;
+  font-family: "montserrat", sans-serif;
+  font-size: 24px;
+}
+
+#car-listing-image {
+  display: block;
+  margin-left: 10px;
+  float: left;
+  width: 30%;
+  max-height: 200px;
+}
+
+#book-button {
+  display: flex;
+  float: right;
+  color: white;
+  background-color: rgba(23, 123, 238, 0.596);
+  border: 1px solid rgba(38, 151, 226, 0.25);
+  border-radius: .25em;
+  outline: none;
+  height: 50px;
+  width: 200px;
+  font-size: 28px;
+  padding: 6px;
+  margin-top: 80px;
+  margin-right: 10px;
+  justify-content: center;
+}
+
+#car-listing-info {
+  display: flex;
+  flex-direction: column;
+  float: left;
+  justify-content: left;
+  position: relative;
+  width: 500px;
+  height: 75px;
+  margin-top: -25px;
+  margin-left: 0;
+  text-align: justify;
+}
+
+#book-button:hover, #book-button:focus {
+  background-color: rgba(10, 161, 221, 0.747);
 }
 
 /* About page css */
+h5 {
+  position: relative;
+  color:#3B5998;
+  text-align: left;
+  font-family: "montserrat", sans-serif;
+  font-size: 48px;
+  margin-top: 10px;
+  margin-left: 25px;
+  margin-bottom: 0;
+}
+
+#about-section {
+  position: relative;
+  color:#333;
+  width: 400px;
+  text-align: justify;
+  font-family: "montserrat", sans-serif;
+  font-size: 24px;
+  margin-left: 10px;
+  margin-top: 10px;
+}
+
+#about-page-banner {
+  position: relative;
+  width: 1000px;
+  height: 450px;
+  opacity: 0.6;
+  filter: contrast(150%);
+  filter: brightness(0.8);
+  margin-top: -50px;
+  margin-right: -10px;
+  float: right;
+}
 
 /* Contact page css */
 #contact-page-info {
@@ -324,6 +512,7 @@ p1 {
   text-align: center;
 }
 
+/* Google Map css */
 #contact-googleMap {
   height: 400px;
   width: 800px;
@@ -363,7 +552,6 @@ p1 {
   font-family: "montserrat", sans-serif;
 }
 
-/* Create two equal columns that sits next to each other */
 .image-column {
   flex: 30%;
   max-width: 30%;
@@ -371,25 +559,21 @@ p1 {
   justify-content: center;
   margin-top: 0;
   margin-right: 10px;
-  height: 500px; /* Should be removed. Only for demonstration */
+  height: 500px; 
 }
 
-/* Position the image container (needed to position the left and right arrows) */
 .product-image-container {
   position: relative;
 }
 
-/* Hide the images by default */
 .mySlides {
   display: block;
 }
 
-/* Add a pointer when hovering over the thumbnail images */
 .cursor {
   cursor: pointer;
 }
 
-/* Next & previous buttons */
 .prev,
 .next {
   cursor: pointer;
@@ -406,7 +590,6 @@ p1 {
   -webkit-user-select: none;
 }
 
-/* Position the "next button" to the right */
 .next {
   right: 0;
   border-radius: 3px 0 0 3px;
@@ -417,13 +600,11 @@ p1 {
   border-radius: 3px 0 0 3px;
 }
 
-/* On hover, add a black background color with a little bit see-through */
 .prev:hover,
 .next:hover {
   background-color: rgba(0, 0, 0, 0.8);
 }
 
-/* Number text (1/3 etc) */
 .numbertext {
   color: #f2f2f2;
   font-size: 12px;
@@ -432,7 +613,6 @@ p1 {
   top: 0;
 }
 
-/* Container for image text */
 .caption-container {
   text-align: center;
   background-color: #222;
@@ -446,13 +626,11 @@ p1 {
   clear: both;
 }
 
-/* Six columns side by side */
 .column {
   float: left;
   width: 33.33%;
 }
 
-/* Add a transparency effect for thumnbail images */
 .demo {
   opacity: 0.6;
 }
@@ -465,7 +643,7 @@ p1 {
 .info-column {
   flex: 50%;
   padding: 10px;
-  height: 900px; /* Should be removed. Only for demonstration */
+  height: 900px; 
   text-align: left;
 }
 
@@ -541,9 +719,9 @@ hr {
   cursor: pointer;
 }
 
-/* Payment page stuff */
+/* Payment page css */
 
-/* Topnav bar stuff */
+/* Topnav bar css */
 /* Style the links inside the navigation bar */
 .topnav a {
   float: left;
